@@ -1,32 +1,36 @@
 <oaf_info>
- 
-<oaf_server iid="OAFIID:GNOME_gnubiffApplet_Factory"
-            type="exe"
-            location="gnubiff">
- 
+    <oaf_server iid="OAFIID:GNOME_gnubiffApplet_Factory"
+                type="exe"
+                location="/usr/local/bin/gnubiff">
         <oaf_attribute name="repo_ids" type="stringv">
-                <item value="IDL:Bonobo/GenericFactory:1.0"/>
-                <item value="IDL:Bonobo/Unknown:1.0"/>
+            <item value="IDL:Bonobo/GenericFactory:1.0"/>
+            <item value="IDL:Bonobo/Unknown:1.0"/>
         </oaf_attribute>
-        <oaf_attribute name="name" type="string" value="gnubiff Applet Factory"/>
-        <oaf_attribute name="description" type="string" value="gnubiff Applet Factory"/>
 
-</oaf_server>
- 
-<oaf_server iid="OAFIID:GNOME_gnubiffApplet"
-            type="factory"
-            location="OAFIID:GNOME_gnubiffApplet_Factory">
- 
+        <oaf_attribute name="name"
+                       type="string"
+                       value="gnubiff Applet Factory"/>
+
+        <oaf_attribute name="description"
+                       type="string"
+                       value="gnubiff Applet Factory"/>
+    </oaf_server>
+
+    <oaf_server iid="OAFIID:GNOME_gnubiffApplet"
+                type="factory"
+                location="OAFIID:GNOME_gnubiffApplet_Factory">
         <oaf_attribute name="repo_ids" type="stringv">
-                <item value="IDL:GNOME/Vertigo/PanelAppletShell:1.0"/>
-                <item value="IDL:Bonobo/Control:1.0"/>
-                <item value="IDL:Bonobo/Unknown:1.0"/>
+            <item value="IDL:GNOME/Vertigo/PanelAppletShell:1.0"/>
+            <item value="IDL:Bonobo/Control:1.0"/>
+            <item value="IDL:Bonobo/Unknown:1.0"/>
         </oaf_attribute>
         <oaf_attribute name="name" type="string" _value="gnubiff"/>
-        <oaf_attribute name="description" type="string" _value="Mail notification program"/>
+        <oaf_attribute name="description"
+                       type="string"
+                       _value="Mail notification program"/>
         <oaf_attribute name="panel:category" type="string" value="Internet"/>
-        <oaf_attribute name="panel:icon" type="string" value="gnubiff.png"/>
- 
-</oaf_server>
- 
+        <oaf_attribute name="panel:icon"
+                       type="string"
+                       value="/usr/local/share/gnubiff/gnubiff.png"/>
+    </oaf_server>
 </oaf_info>
