@@ -11,6 +11,7 @@ Version 2.2.0
    - Added files from libegg for later systray support
    - Updated TODO
    - Cleanup of Applet code
+   - Bugfix: gnome version of gnubiff can now be installed to any directory
 
 Version 2.1.6
  * Robert Sowada
